feat: more UX changes (#16)
